# SolarSystem

./: CMakeLists.txt  README.md  Space.sln
Dependencies/glad/include/glad/: glad.h
Space/: Space.vcxproj  Space.vcxproj.filters
Space/Shaders/Fragment/: SunFragment.glsl
Space/Shaders/Vertex/: PlanetVertex.glsl  SquareVertex.glsl  SunVertex.glsl
Space/src/: Config.h  Mesh.h  Planet.h  Shader.h  Source.cpp  glad.c
